# erasure

./: CMakeLists.txt  _clang-format  license.txt
erasure/: CMakeLists.txt
erasure/include/bk/erasure/: static_any.hpp  static_function.hpp
erasure/include/bk/erasure/bits/: detectors.hpp  generate_pointer_table.hpp  generate_switch.hpp  pointer_table_holder.hpp  signature.hpp  special_members.hpp  swallow.hpp  switch_function_pointer_holder.hpp  traits.hpp
erasure/include/bk/erasure/policies/: binding_policy.hpp  call_policy.hpp  callable_checking_policy.hpp  copy_policy.hpp  destructor_policy.hpp  enums.hpp  move_policy.hpp  null_policies.hpp  policies_descriptor.hpp  type_checking_policy.hpp  type_id_policy.hpp
test/: CMakeLists.txt
test/fixtures/: CMakeLists.txt
test/fixtures/include/bk/erasure/fixtures/: erasure_test_policies.hpp
test/tests/: CMakeLists.txt
test/tests/any_tests/: basic_is_empty_test.cpp  construct_and_get_test.cpp  copy_test.cpp  copy_test_non_trivial.cpp  destructor_test.cpp  main.cpp  move_test.cpp  move_test_non_trivial.cpp
test/tests/function_tests/: basic_is_empty_test.cpp  construct_and_call_non_stateful_test.cpp  construct_and_call_stateful_test.cpp  copy_test.cpp  copy_test_non_trivial.cpp  destructor_test.cpp  main.cpp  move_test.cpp  move_test_non_trivial.cpp
